@@ -1,3 +1,14 @@
+added --newmessage and --from options to startup.  this allows you to 
+invoke Pooka only to send a new message.
+
+added a network listener so that, by default, if you try to start up two
+Pooka clients from the same Pookarc you instead will just bring the first
+one to the foreground.
+
+changed the order of saves so that if the save to sent folder fails for
+a new message, the message window doesn't disappear until after the
+error clears.
+
 050329 release
 --------------
 
